--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,20 @@ android {
     }
 }
 
+//repositories{
+//    flatDir{
+//        dirs 'libs'
+//    }
+//}
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar','*.aar'], dir: 'libs')
+//    implementation (name:'h5activity', ext:'aar')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
     implementation 'org.greenrobot:greendao:3.2.2'
+    compile project(':jsbridgedemo')
 }
