--- a/jsbridgedemo/src/main/AndroidManifest.xml
+++ b/jsbridgedemo/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:label="@string/app_name">
         <activity
             android:name=".H5Activity"
+            android:taskAffinity=""
+            android:launchMode="singleTask"
+            android:excludeFromRecents="true"
             android:configChanges="keyboardHidden|orientation|screenSize|locale|fontScale|layoutDirection"
             android:screenOrientation="portrait" />
     </application>
