--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".local.MainActivity" />
+
             <intent-filter>
                 <action android:name="sunzf.intent.action.DANGEROUS_TEST" />
 
@@ -85,6 +86,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".local.MainActivity" />
+
             <intent-filter>
                 <action android:name="sunzf.intent.action.NORMAL_TEST" />
 
@@ -106,7 +108,9 @@
             android:name=".socketIPC.TCPServerService"
             android:enabled="true"
             android:exported="true"
-            android:process=":tcpserver"></service>
+            android:process=":tcpserver" />
+
+        <activity android:name=".socketIPC.TCPClientActivity"></activity>
     </application>
 
 </manifest>
